--- a/2014-01-xx/praesentation/kettle.tex
+++ b/2014-01-xx/praesentation/kettle.tex
@@ -52,8 +52,7 @@ Rötistrasse 4\\
 \begin{frame}
   \frametitle{Inhalt}
   \begin{itemize}
-  \item Was ist Kettle? Was ist PDI? Was ist Geokettle?
-  \item 
+  \item Was ist Kettle? Was ist PDI? Was ist GeoKettle?
   \item Geo ohne GeoKettle?
   \item Demo
   \item Inspiration
@@ -131,6 +130,15 @@ Rötistrasse 4\\
  \end{itemize}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Inspiration}
+  \begin{itemize}
+  \item \texttt{http://www.slideshare.com}
+  \item \texttt{http://forum.pentaho.com}
+  \item \texttt{http://forum.spatialytics.com}
+  \item \texttt{http://diethardsteiner.blogspot.ch}
+ \end{itemize}
+\end{frame}
 
 \begin{frame}
   \frametitle{Persönliches Fazit}
@@ -140,7 +148,7 @@ Rötistrasse 4\\
   \item GeoKettle, quo vadis?
  \end{itemize}
   \begin{itemize}
-  \item Fexibel: läuft auch als Cronjob.
+  \item Fexibel: läuft z.\,B. auch als Cronjob.
   \item Übersichtliches GUI: einzelne Prozessschritte sind klar sichtbar.
   \item Tiefe Hemmschwelle: man programmiert nicht.
   \item Grosse Auswahl an Werkzeugen: E-Mail-Versand, Logging, Access/Excel In-/Output, SAP-Input (?) etc.
@@ -148,197 +156,6 @@ Rötistrasse 4\\
 \end{frame}
 
 
-\begin{frame}
-  \frametitle{QGIS-GUI}
-  \begin{figure}
-    \includegraphics[scale=0.35]{bilder/veriso_topic_loader_3.png}
-  \end{figure}
-\end{frame}
-
-\begin{frame}
-  \frametitle{QGIS-GUI}
-  \begin{figure}
-    \includegraphics[scale=0.35]{bilder/veriso_checks_3.png}
-  \end{figure}
-\end{frame}
-
-\begin{frame}[fragile]
-  \frametitle{QGIS-GUI: ILI $\rightarrow$ XML}
-  \begin{tiny}
-  \begin{verbatim}
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<topics>
-  <topic id="FixpunkteKategorie1" title="FixpunkteKategorie1" group="FixpunkteKategorie1">
-    <table>
-      <group>FixpunkteKategorie1</group>
-      <title>LFP1Nachfuehrung</title>
-      <schema>av_dm01avso24</schema>
-      <table>fixpunktekategorie1_lfp1nachfuehrung</table>
-      <geom>perimeter</geom>
-      <style></style>
-    </table>
-    <table>
-      <group>FixpunkteKategorie1</group>
-      <title>LFP1</title>
-      <schema>av_dm01avso24</schema>
-      <table>fixpunktekategorie1_lfp1</table>
-      <geom>geometrie</geom>
-      <style></style>
-    </table>
-    ....
-  <topic id="Bodenbedeckung" title="Bodenbedeckung" group="Bodenbedeckung">   
-    <table>
-      <group>Bodenbedeckung</group>
-      <title>BoFlaeche</title>
-      <schema>dm01avso24</schema>
-      <table>bodenbedeckung_boflaeche</table>
-      <geom>geometrie</geom>
-      <style></style>
-    </table>
-    ....
- </topic>
-</topics>    
-  \end{verbatim}
-  \end{tiny}
-\end{frame}
-
-
-\begin{frame}[fragile]
-  \frametitle{QGIS-GUI: XML für Checks}
-  \begin{tiny}
-  \begin{verbatim}
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<checks>
-  <check id="fixpunktekategorie1" title="Übersicht" group="Fixpunktekategorie1" 
-         topic="Fixpunktekategorie1" type="complex">
-    <file>complexchecks.fp1</file>
-  </check>
-  ...  
-  <check id="gebaeudeadressen_basis" title="Basislayer" group="Gebaeudeadressen - Basislayer" 
-         topic="Gebaeudeadressen" type="complex">
-    <file>complexchecks.gebaeudeadressen_basislayer</file>
-  </check>   
-  <check id="gebaeudeadressen_check" title="Checklayer" group="Gebaeudeadressen - Checklayer" 
-         topic="Gebaeudeadressen" type="complex">
-    <file>complexchecks.gebaeudeadressen_checklayer</file>
-  </check>    
-  <check id="gebaeudeadressen_lokalisations" title="Lokalisations-Test" 
-         group="Gebaeudeadressen - Lokalisations-Test" topic="Gebaeudeadressen" type="complex">
-    <file>complexchecks.gebaeudeadressen_lokalisation</file>
-    <shortcut>F12</shortcut>
-  </check>           
-  ...
-</checks>   
-  \end{verbatim}
-  \end{tiny}
-\end{frame}
-
-\begin{frame}[fragile]
-  \frametitle{Checks}
-  \begin{itemize}
-  \item «Alles ist möglich!»
-  \item «einfach»:
-  \begin{itemize}
-   \item Vordefinierte PostGIS-Views oder Tabellen (falls View zu langsam).
-   \item Tabellen werden während des Importes abgefüllt.
-   \item Queries sind in spezieller Tabelle gespeichert. 
-  \end{itemize}
-  \item «komplex»:
-  \begin{itemize}
-   \item beliebig kompliziert
-   \item Alles was die Python- und PyQGIS-API hergibt, z.\,B.:
-   \begin{itemize}
-    \item Excel-Export
-    \item PDF erzeugen
-    \item Daten mit WFS requesten und vergleich.
-    \item \ldots
-   \end{itemize}
-
-  \end{itemize}
-  
-  \item Alles in \textit{mindestens} einer Python-Datei verpackt.
- \end{itemize}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Checks}
-  \begin{figure}
-    \includegraphics[scale=0.3]{bilder/veriso_spinnennetz_1.png}
-  \end{figure}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Checks}
-  \begin{figure}
-    \includegraphics[scale=0.3]{bilder/veriso_spinnennetz_2.png}
-  \end{figure}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Checks}
-  \begin{figure}
-    \includegraphics[scale=0.3]{bilder/veriso_f12.png}
-  \end{figure}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Checks}
-  \begin{figure}
-    \includegraphics[scale=0.3]{bilder/veriso_gwr_import.png}
-  \end{figure}
-\end{frame}
-
-\begin{frame}[fragile]
-  \frametitle{Checks: Umsetzung GUI}
-  \begin{tiny}
-  \begin{verbatim}
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<checks>
-  <check id="fixpunktekategorie1" title="Übersicht" group="Fixpunktekategorie1" 
-         topic="Fixpunktekategorie1" type="complex">
-    <file>complexchecks.fp1</file>
-  </check>
-  ...  
-  <check id="gebaeudeadressen_basis" title="Basislayer" group="Gebaeudeadressen - Basislayer" 
-         topic="Gebaeudeadressen" type="complex">
-    <file>complexchecks.gebaeudeadressen_basislayer</file>
-  </check>   
-  <check id="gebaeudeadressen_check" title="Checklayer" group="Gebaeudeadressen - Checklayer" 
-         topic="Gebaeudeadressen" type="complex">
-    <file>complexchecks.gebaeudeadressen_checklayer</file>
-  </check>    
-  <check id="gebaeudeadressen_lokalisations" title="Lokalisations-Test" 
-         group="Gebaeudeadressen - Lokalisations-Test" topic="Gebaeudeadressen" type="complex">
-    <file>complexchecks.gebaeudeadressen_lokalisation</file>
-    <shortcut>F12</shortcut>
-  </check>           
-  ...
-</checks>   
-  \end{verbatim}
-  \end{tiny}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Checks: Umsetzung GUI}
-  \begin{figure}
-    \includegraphics[scale=0.35]{bilder/veriso_checks_3.png}
-  \end{figure}
-\end{frame}
-
-
-
-
-\begin{frame}[fragile]
-  \frametitle{Checkliste}
-  \begin{itemize}
-  \item Möglichst einfach.
-  \item Keine zusätzliche Software.
-  \item HTML-Formulare
-  \item Persistentes Speichern von Daten mittels \textit{Web Storage}.
-  \item Achtung: Daten «nur» im Browser gespeichert!
-  \item Für jedes Operat wird HTML-Datei von Template kopiert.
-  \end{itemize}
-\end{frame}
 
 
 
