Kleiner Änderungen Präsentation

--- a/2014-01-xx/praesentation/kettle.tex
+++ b/2014-01-xx/praesentation/kettle.tex
@@ -133,6 +133,7 @@ Rötistrasse 4\\
 \begin{frame}
   \frametitle{Inspiration}
   \begin{itemize}
+  \item \texttt{samples/}-Verzeichnis
   \item \texttt{http://www.slideshare.com}
   \item \texttt{http://forum.pentaho.com}
   \item \texttt{http://forum.spatialytics.com}
